# server-brand

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
.github/workflows/: test.yml
disable_odoo_online/: README.rst
disable_odoo_online/static/description/: index.html
portal_odoo_debranding/: README.rst
portal_odoo_debranding/static/description/: index.html
remove_odoo_enterprise/: README.rst
remove_odoo_enterprise/static/description/: index.html
setup/_metapackage/: pyproject.toml
